--- a/packages/app-client/package.json
+++ b/packages/app-client/package.json
@@ -32,6 +32,7 @@
     "jsdom": "^24.1.1",
     "solid-devtools": "^0.29.2",
     "typescript": "^5.3.3",
+    "unocss": "^0.62.2",
     "vite": "^5.0.11",
     "vite-plugin-solid": "^2.8.2",
     "vitest": "^2.0.5"
