--- a/packages/app-client/package.json
+++ b/packages/app-client/package.json
@@ -21,6 +21,7 @@
     "@unocss/reset": "^0.62.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lodash-es": "^4.17.21",
     "solid-js": "^1.8.11",
     "tailwind-merge": "^2.5.2",
     "unocss-preset-animations": "^1.1.0"
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.27.0",
     "@iconify-json/tabler": "^1.1.120",
+    "@types/lodash-es": "^4.17.12",
     "eslint": "^9.9.0",
     "jsdom": "^24.1.1",
     "solid-devtools": "^0.29.2",
