--- a/packages/app-client/tsconfig.json
+++ b/packages/app-client/tsconfig.json
@@ -14,6 +14,7 @@
     "noEmit": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "skipLibCheck": true
   }
 }
