--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@enclosed/root",
   "version": "1.0.0",
-  "description": "",
+  "description": "Send private and secure note",
+  "packageManager": "pnpm@9.2.0",
   "main": "index.js",
   "scripts": {
     "build:app": "pnpm -p --filter @enclosed/app-* run build && mkdir -p packages/app-server/dist-app && cp -r packages/app-*/dist/* packages/app-server/dist-app"
