--- a/packages/app-client/package.json
+++ b/packages/app-client/package.json
@@ -2,6 +2,7 @@
   "name": "@enclosed/app-client",
   "type": "module",
   "version": "0.0.0",
+  "packageManager": "pnpm@9.2.0",
   "description": "",
   "license": "MIT",
   "scripts": {
@@ -13,7 +14,8 @@
     "lint:fix": "eslint --fix .",
     "test": "pnpm run test:unit",
     "test:unit": "vitest run",
-    "test:unit:watch": "vitest watch"
+    "test:unit:watch": "vitest watch",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@kobalte/core": "^0.13.4",
