--- a/packages/app-server/package.json
+++ b/packages/app-server/package.json
@@ -40,6 +40,7 @@
     "@cloudflare/workers-types": "^4.20240821.1",
     "@types/lodash": "^4.17.7",
     "dotenv": "^16.4.5",
+    "esbuild": "^0.23.1",
     "eslint": "^9.9.0",
     "tsx": "^4.17.0",
     "typescript": "^5.5.4",
