--- a/packages/app-server/package.json
+++ b/packages/app-server/package.json
@@ -31,7 +31,7 @@
     "date-fns": "^3.6.0",
     "figue": "^2.0.0",
     "hono": "^4.5.8",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "pino": "^9.3.2",
     "ulid-workers": "^2.1.0",
     "unstorage": "^1.10.2",
@@ -40,7 +40,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.27.0",
     "@cloudflare/workers-types": "^4.20240821.1",
-    "@types/lodash": "^4.17.7",
+    "@types/lodash-es": "^4.17.12",
     "dotenv": "^16.4.5",
     "esbuild": "^0.23.1",
     "eslint": "^9.9.0",
