--- a/packages/app-server/package.json
+++ b/packages/app-server/package.json
@@ -21,9 +21,8 @@
     "deploy": "$npm_execpath run build && wrangler pages deploy",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "test": "pnpm run test:unit",
-    "test:unit": "vitest run",
-    "test:unit:watch": "vitest watch",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -32,6 +31,7 @@
     "figue": "^2.0.0",
     "hono": "^4.5.8",
     "lodash-es": "^4.17.21",
+    "node-cron": "^3.0.3",
     "pino": "^9.3.2",
     "ulid-workers": "^2.1.0",
     "unstorage": "^1.10.2",
@@ -40,7 +40,10 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.27.0",
     "@cloudflare/workers-types": "^4.20240821.1",
+    "@total-typescript/ts-reset": "^0.6.0",
     "@types/lodash-es": "^4.17.12",
+    "@types/node-cron": "^3.0.11",
+    "@vitest/coverage-v8": "^2.0.5",
     "dotenv": "^16.4.5",
     "esbuild": "^0.23.1",
     "eslint": "^9.9.0",
