chore(scripts): added maintenance script for cleaning cloudflare kv store item without ttl

--- a/packages/app-server/package.json
+++ b/packages/app-server/package.json
@@ -50,6 +50,7 @@
     "tsx": "^4.17.0",
     "typescript": "^5.5.4",
     "vitest": "^2.0.5",
-    "wrangler": "^3.72.1"
+    "wrangler": "^3.72.1",
+    "zx": "^8.1.4"
   }
 }
