--- a/packages/app-server/package.json
+++ b/packages/app-server/package.json
@@ -15,7 +15,7 @@
     "build": "$npm_execpath run build:cloudflare",
     "dev:node": "tsx -r dotenv/config --watch src/index.node.ts",
     "dev:cloudflare": "wrangler dev --test-scheduled --port=8787 src/index.cloudflare.ts",
-    "build:cloudflare": "esbuild --bundle src/index.cloudflare.ts --format=esm --outfile=dist/_worker.js --minify",
+    "build:cloudflare": "esbuild --bundle src/index.cloudflare.ts --format=esm --outfile=dist-cloudflare/_worker.js --minify",
     "build:node": "esbuild --bundle src/index.node.ts --platform=node --format=cjs --outfile=dist-node/index.cjs --minify",
     "preview": "wrangler pages dev",
     "deploy": "$npm_execpath run build && wrangler pages deploy",
