--- a/packages/app-server/wrangler.toml
+++ b/packages/app-server/wrangler.toml
@@ -1,6 +1,6 @@
 name = "enclosed-app"
 compatibility_date = "2024-08-20"
-pages_build_output_dir = "./dist-app"
+pages_build_output_dir = "./dist"
 
 [[kv_namespaces]]
 binding = "notes"
