--- a/packages/app-server/package.json
+++ b/packages/app-server/package.json
@@ -10,6 +10,9 @@
     "type": "git",
     "url": "https://github.com/CorentinTh/enclosed"
   },
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "scripts": {
     "dev": "$npm_execpath run dev:cloudflare",
     "build": "$npm_execpath run build:cloudflare",
