--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@enclosed/lib",
   "type": "module",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "packageManager": "pnpm@9.9.0",
   "description": "Enclosed lib to create secure notes.",
   "author": "Corentin Thomasset <corentinth@proton.me> (https://corentin.tech)",
@@ -58,7 +58,9 @@
   "main": "./dist/index.node.cjs",
   "module": "./dist/index.web.mjs",
   "types": "./dist/index.web.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "engines": {
     "node": ">=22.0.0"
   },
@@ -75,10 +77,12 @@
     "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
+    "lodash-es": "^4.17.21",
     "ofetch": "^1.3.4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.27.0",
+    "@types/lodash-es": "^4.17.12",
     "@vitest/coverage-v8": "^2.0.5",
     "dotenv": "^16.4.5",
     "eslint": "^9.9.0",
