--- a/packages/app-client/package.json
+++ b/packages/app-client/package.json
@@ -26,12 +26,14 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@corentinth/chisels": "^1.0.2",
     "@enclosed/lib": "workspace:*",
     "@kobalte/core": "^0.13.4",
     "@solidjs/router": "^0.14.3",
     "@unocss/reset": "^0.62.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "jszip": "^3.10.1",
     "lodash-es": "^4.17.21",
     "solid-js": "^1.8.11",
     "tailwind-merge": "^2.5.2",
