--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -77,15 +77,19 @@
     "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
+    "cbor-x": "^1.6.0",
     "lodash-es": "^4.17.21",
+    "msgpackr": "^1.11.0",
     "ofetch": "^1.3.4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.27.0",
     "@types/lodash-es": "^4.17.12",
+    "@types/node": "^22.5.4",
     "@vitest/coverage-v8": "^2.0.5",
     "dotenv": "^16.4.5",
     "eslint": "^9.9.0",
+    "tsx": "^4.17.0",
     "typescript": "^5.5.4",
     "unbuild": "^2.0.0",
     "vitest": "^2.0.5"
