--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "engines": {
     "node": ">=22.0.0"
-   },
+  },
+  "scripts": {
+    "release": "bumpp --commit --tag --push --recursive"
+  },
   "keywords": [
     "note",
     "secure",
@@ -21,5 +24,8 @@
     "password",
     "manager",
     "expiration"
-  ]
+  ],
+  "devDependencies": {
+    "bumpp": "^9.5.2"
+  }
 }
