--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -74,8 +74,7 @@
     "test:unit": "vitest run",
     "test:unit:watch": "vitest watch",
     "typecheck": "tsc --noEmit",
-    "prepublishOnly": "pnpm run build",
-    "release": "bumpp --commit --push --tag && npm publish"
+    "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
     "cbor-x": "^1.6.0",
@@ -88,7 +87,6 @@
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.5.4",
     "@vitest/coverage-v8": "^2.0.5",
-    "bumpp": "^9.5.2",
     "dotenv": "^16.4.5",
     "eslint": "^9.9.0",
     "tsx": "^4.17.0",
