--- a/.github/workflows/cd-docker-release.yaml
+++ b/.github/workflows/cd-docker-release.yaml
@@ -133,7 +133,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push
+      - name: Build and push root Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -145,3 +145,16 @@ jobs:
             corentinth/enclosed:${{ env.RELEASE_VERSION }}
             ghcr.io/corentinth/enclosed:latest
             ghcr.io/corentinth/enclosed:${{ env.RELEASE_VERSION}}
+
+      - name: Build and push rootless Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./Dockerfile.rootless
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: |
+            corentinth/enclosed:latest-rootless
+            corentinth/enclosed:${{ env.RELEASE_VERSION }}-rootless
+            ghcr.io/corentinth/enclosed:latest-rootless
+            ghcr.io/corentinth/enclosed:${{ env.RELEASE_VERSION }}-rootless
