--- a/Dockerfile.rootless
+++ b/Dockerfile.rootless
@@ -25,14 +25,20 @@ RUN pnpm --filter @enclosed/lib run build && \
 # Production image 
 FROM node:22-alpine
 
+# Create a non-root user and group
+RUN addgroup -S nonroot && adduser -S nonroot -G nonroot
+
 WORKDIR /app
 
 # Copy the built apps
 COPY --from=builder /app/packages/app-client/dist ./public
 COPY --from=builder /app/packages/app-server/dist-node/index.cjs ./index.cjs
 
-# Create the .data directory 
-RUN mkdir -p /app/.data 
+# Create the .data directory and set permissions
+RUN mkdir -p /app/.data && chown -R nonroot:nonroot /app
+
+# Change the user to nonroot
+USER nonroot
 
 EXPOSE 8787
 
