--- a/packages/app-server/package.json
+++ b/packages/app-server/package.json
@@ -31,6 +31,7 @@
     "@corentinth/chisels": "^1.0.4",
     "@enclosed/lib": "workspace:*",
     "@hono/node-server": "^1.12.1",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^3.6.0",
     "figue": "^2.1.0",
     "hono": "^4.5.8",
@@ -45,6 +46,7 @@
     "@antfu/eslint-config": "^3.0.0",
     "@cloudflare/workers-types": "^4.20240821.1",
     "@total-typescript/ts-reset": "^0.6.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/lodash-es": "^4.17.12",
     "@types/node-cron": "^3.0.11",
     "@vitest/coverage-v8": "^2.0.5",
