chore(docs): added lint

--- a/.github/workflows/ci-docs.yaml
+++ b/.github/workflows/ci-docs.yaml
@@ -26,5 +26,8 @@ jobs:
         run: pnpm i
         working-directory: ./
 
+      - name: Run linters
+        run: pnpm lint
+
       - name: Build the lib
         run: pnpm build
