feat(i18n): added i18n base

--- a/packages/app-client/tsconfig.json
+++ b/packages/app-client/tsconfig.json
@@ -9,6 +9,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
+    "resolveJsonModule": true,
     "types": ["vite/client"],
     "strict": true,
     "noEmit": true,
