--- a/packages/app-client/package.json
+++ b/packages/app-client/package.json
@@ -29,6 +29,7 @@
     "@corentinth/chisels": "^1.0.2",
     "@enclosed/lib": "workspace:*",
     "@kobalte/core": "^0.13.4",
+    "@solid-primitives/i18n": "^2.1.1",
     "@solid-primitives/storage": "^4.2.1",
     "@solidjs/router": "^0.14.3",
     "@unocss/reset": "^0.62.2",
