--- a/.github/workflows/cd-app-prod.yaml
+++ b/.github/workflows/cd-app-prod.yaml
@@ -1,10 +1,12 @@
+name: CD - Production
+
 on:
   push:
     branches:
       - main
 
 jobs:
-  publish-app:
+  publish-app-prod:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -38,7 +40,7 @@ jobs:
           branch: main
           wranglerVersion: '3'
 
-  publish-docs:
+  publish-docs-prod:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -56,7 +58,7 @@ jobs:
       - name: Install dependencies
         run: pnpm i
 
-      - name: Build the app
+      - name: Build the docs
         run: pnpm -F @enclosed/docs build
 
       - name: Publish to Cloudflare Pages
