--- a/.github/workflows/cd-preview-deploy.yaml
+++ b/.github/workflows/cd-preview-deploy.yaml
@@ -34,7 +34,7 @@ jobs:
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           githubToken: ${{ secrets.GITHUB_TOKEN }}
           projectName: enclosed
-          deploymentName: Preview
+          deploymentName: Preview App
           directory: ${{ steps.preview-app-build-artifact.outputs.download-path }}
           wranglerVersion: '3'
 
@@ -59,6 +59,6 @@ jobs:
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           githubToken: ${{ secrets.GITHUB_TOKEN }}
           projectName: enclosed-docs
-          deploymentName: Preview
+          deploymentName: Preview Docs
           directory: ${{ steps.preview-docs-build-artifact.outputs.download-path }}
           wranglerVersion: '3'
