--- a/.github/workflows/ci-test-e2e.yml
+++ b/.github/workflows/ci-test-e2e.yml
@@ -1,11 +1,13 @@
-name: E2E Tests
+name: CI - App Client E2E
 
 on:
-  deployment_status:
+  pull_request:
+  push:
+    branches:
+      - main
 
 jobs:
   run-e2es:
-    if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
     timeout-minutes: 60
     defaults:
@@ -14,19 +16,28 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - run: corepack enable
     - uses: actions/setup-node@v4
       with:
-        node-version: 20
+        node-version: 22
         corepack: true
         cache: 'pnpm'
 
     - name: Get Playwright version
       id: playwright-version
-      run: echo "PLAYWRIGHT_VERSION=$(jq -r .dependencies.playwright package.json)" >> "$GITHUB_OUTPUT"
+      run: echo "PLAYWRIGHT_VERSION=$(jq -r .devDependencies.\"@playwright/test\" package.json)" >> "$GITHUB_OUTPUT"
 
     - name: Install dependencies
       run: pnpm i
       working-directory: ./
+      
+    - name: Build iso-prod app
+      run: |
+        pnpm -F @enclosed/app-client build
+        pnpm -F @enclosed/app-server build:node
+        mkdir dist-app
+        cp -r dist dist-app/public
+        cp -r ../app-server/dist-node/index.cjs dist-app/index.cjs
 
     - name: Restore Playwright browsers from cache
       uses: actions/cache@v3
@@ -43,7 +54,7 @@ jobs:
     - name: Run e2e tests
       run: pnpm test:e2e
       env:
-        BASE_URL: ${{ github.event.deployment_status.environment_url }}
+        USE_PREVIEW_SERVER: true
         
     - uses: actions/upload-artifact@v4
       if: always()
