--- a/.github/workflows/ci-cli.yaml
+++ b/.github/workflows/ci-cli.yaml
@@ -30,8 +30,8 @@ jobs:
       - name: Run linters
         run: pnpm lint
 
-      # - name: Type check
-      #   run: pnpm typecheck
+      - name: Type check
+        run: pnpm typecheck
 
       # - name: Run unit test
       #   run: pnpm test
