--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -40,7 +40,6 @@
     "lodash-es": "^4.17.21",
     "ora": "^8.1.0",
     "picocolors": "^1.0.1",
-    "tsx": "^4.17.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -48,9 +47,10 @@
     "@types/lodash-es": "^4.17.12",
     "@vitest/coverage-v8": "^2.0.5",
     "dotenv": "^16.4.5",
-    "eslint": "^9.10.0",
-    "typescript": "^5.5.4",
+    "eslint": "catalog:",
+    "tsx": "catalog:",
+    "typescript": "catalog:",
     "unbuild": "^2.0.0",
-    "vitest": "^2.0.5"
+    "vitest": "catalog:"
   }
 }
