--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -26,11 +26,11 @@
     "@antfu/eslint-config": "^3.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/lodash-es": "^4.17.12",
-    "eslint": "^9.10.0",
+    "eslint": "catalog:",
     "figue": "^2.1.0",
     "less": "^4.2.0",
     "lodash-es": "^4.17.21",
-    "typescript": "^5.6.2",
+    "typescript": "catalog:",
     "vitepress": "^1.3.4"
   }
 }
