--- a/packages/app-client/package.json
+++ b/packages/app-client/package.json
@@ -43,11 +43,11 @@
     "unocss-preset-animations": "^1.1.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.0.0",
+    "@antfu/eslint-config": "catalog:",
     "@iconify-json/tabler": "^1.1.120",
     "@playwright/test": "^1.46.1",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.5.0",
+    "@types/node": "catalog:",
     "eslint": "catalog:",
     "jsdom": "^25.0.0",
     "typescript": "catalog:",
