--- a/packages/app-server/package.json
+++ b/packages/app-server/package.json
@@ -43,7 +43,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.0.0",
+    "@antfu/eslint-config": "catalog:",
     "@cloudflare/workers-types": "^4.20240821.1",
     "@total-typescript/ts-reset": "^0.6.0",
     "@types/bcryptjs": "^2.4.6",
