--- a/packages/crypto/package.json
+++ b/packages/crypto/package.json
@@ -80,9 +80,9 @@
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.0.0",
+    "@antfu/eslint-config": "catalog:",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.5.4",
+    "@types/node": "catalog:",
     "@vitest/coverage-v8": "^2.0.5",
     "eslint": "catalog:",
     "tsx": "catalog:",
