--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -42,9 +42,9 @@
     "ofetch": "^1.3.4"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.0.0",
+    "@antfu/eslint-config": "catalog:",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.5.4",
+    "@types/node": "catalog:",
     "@vitest/coverage-v8": "^2.0.5",
     "dotenv": "^16.4.5",
     "eslint": "catalog:",
