--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,7 +2,9 @@ packages:
   - 'packages/*'
 
 catalog:
-  typescript: ^5.6.2
-  tsx: ^4.17.0
+  "@antfu/eslint-config": ^3.6.2
+  "@types/node": ^22.5.4
   eslint: ^9.10.0
+  tsx: ^4.17.0
+  typescript: ^5.6.2
   vitest: ^2.0.5
