--- a/packages/app-server/package.json
+++ b/packages/app-server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@enclosed/app-server",
   "type": "module",
-  "version": "1.9.2-beta.1",
+  "version": "1.9.2",
   "packageManager": "pnpm@9.12.2",
   "description": "Enclosed backend server",
   "author": "Corentin Thomasset <corentinth@proton.me> (https://corentin.tech)",
