--- a/packages/deploy-cloudflare/package.json
+++ b/packages/deploy-cloudflare/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enclosed/deploy-cloudflare",
-  "version": "1.9.2-beta.1",
+  "version": "1.9.2",
   "description": "Deploy scripts for Cloudflare Pages",
   "packageManager": "pnpm@9.12.2",
   "license": "Apache-2.0",
