--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@enclosed/docs",
   "type": "module",
-  "version": "1.9.2-beta.1",
+  "version": "1.9.2",
   "packageManager": "pnpm@9.12.2",
   "description": "Documentation website for Enclosed.",
   "author": "Corentin Thomasset <corentinth@proton.me> (https://corentin.tech)",
