--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@enclosed/lib",
   "type": "module",
-  "version": "1.9.2-beta.1",
+  "version": "1.9.2",
   "packageManager": "pnpm@9.12.2",
   "description": "Enclosed lib to create secure notes.",
   "author": "Corentin Thomasset <corentinth@proton.me> (https://corentin.tech)",
