--- a/packages/app-client/package.json
+++ b/packages/app-client/package.json
@@ -37,8 +37,11 @@
     "@unocss/reset": "^0.64.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "highlight.js": "^9.18.5",
     "jszip": "^3.10.1",
     "lodash-es": "^4.17.21",
+    "marked": "^15.0.5",
+    "marked-highlight": "^2.2.1",
     "solid-js": "^1.8.11",
     "solid-sonner": "^0.2.8",
     "tailwind-merge": "^2.5.2",
@@ -49,8 +52,10 @@
     "@antfu/eslint-config": "catalog:",
     "@iconify-json/tabler": "^1.1.120",
     "@playwright/test": "^1.46.1",
+    "@types/highlight.js": "^10.1.0",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "catalog:",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "catalog:",
     "jsdom": "^25.0.0",
     "tsx": "^4.19.1",
