chore(deps): update dependencies across app-client and app-server
- Updated @corentinth/chisels to v1.1.0 in both app-client and app-server.
- Updated @iconify-json/tabler to v1.2.17 in app-client.
- Updated dotenv to v16.4.7 in app-server.
- Updated @total-typescript/ts-reset to v0.6.1 in app-server.
- Updated bcryptjs to v3.0.2 in app-server.
- Updated solid-js to v1.9.5 in app-client.
- Updated tsx to v4.19.3 in both app-client and app-server.
- Updated vitest to v2.1.9 in both app-client and app-server.
- Updated various other dependencies to their latest versions.

--- a/packages/app-server/package.json
+++ b/packages/app-server/package.json
@@ -28,7 +28,7 @@
     "script:generate-config-table": "tsx -r dotenv/config src/scripts/generate-config-table.script.ts"
   },
   "dependencies": {
-    "@corentinth/chisels": "^1.0.4",
+    "@corentinth/chisels": "^1.1.0",
     "@enclosed/lib": "workspace:*",
     "@hono/node-server": "^1.12.1",
     "bcryptjs": "^2.4.3",
@@ -45,12 +45,12 @@
   "devDependencies": {
     "@antfu/eslint-config": "catalog:",
     "@cloudflare/workers-types": "^4.20240821.1",
-    "@total-typescript/ts-reset": "^0.6.0",
+    "@total-typescript/ts-reset": "^0.6.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/lodash-es": "^4.17.12",
     "@types/node-cron": "^3.0.11",
-    "@vitest/coverage-v8": "^2.0.5",
-    "dotenv": "^16.4.5",
+    "@vitest/coverage-v8": "catalog:",
+    "dotenv": "^16.4.7",
     "esbuild": "^0.24.0",
     "eslint": "catalog:",
     "pino-pretty": "^11.2.2",
@@ -58,6 +58,6 @@
     "typescript": "catalog:",
     "vitest": "catalog:",
     "wrangler": "^3.72.1",
-    "zx": "^8.1.4"
+    "zx": "^8.4.1"
   }
 }
