--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -45,7 +45,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "catalog:",
     "@types/lodash-es": "^4.17.12",
-    "@vitest/coverage-v8": "^2.0.5",
+    "@vitest/coverage-v8": "catalog:",
     "dotenv": "^16.4.5",
     "eslint": "catalog:",
     "tsx": "catalog:",
