--- a/packages/crypto/package.json
+++ b/packages/crypto/package.json
@@ -83,7 +83,7 @@
     "@antfu/eslint-config": "catalog:",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "catalog:",
-    "@vitest/coverage-v8": "^2.0.5",
+    "@vitest/coverage-v8": "catalog:",
     "eslint": "catalog:",
     "tsx": "catalog:",
     "typescript": "catalog:",
