--- a/packages/app-client/package.json
+++ b/packages/app-client/package.json
@@ -28,7 +28,7 @@
     "script:get-missing-i18n-keys": "tsx src/scripts/get-missing-i18n-keys.script.ts"
   },
   "dependencies": {
-    "@corentinth/chisels": "^1.1.0",
+    "@corentinth/chisels": "catalog:",
     "@enclosed/lib": "workspace:*",
     "@kobalte/core": "^0.13.4",
     "@solid-primitives/i18n": "^2.1.1",
